force-app/main/default/objects/EmailAI__c/EmailAI__c.object-meta.xml
<CustomObject>
    <label>EmailAI</label>
    <nameField>
        <label>EmailAI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailAI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>