force-app/main/default/objects/EmailAI__c/fields/Full_Format__c.field-meta.xml
<CustomField>
    <fullName>Full_Format__c</fullName>
    <label>Full Format</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>