force-app/main/default/objects/EmailAI__c/fields/textBody__c.field-meta.xml
<CustomField>
    <fullName>textBody__c</fullName>
    <defaultValue>&quot;Hi Team,&quot; &amp; BR() &amp; &quot;Today&apos;s Status Update:&quot;&amp; BR() &amp; &quot;Today, I learn about salesforce&quot;&amp; BR() &amp; &quot;&quot; &amp; BR() &amp; &quot;office end time - 06:00 PM&quot;&amp; BR() &amp; &quot;Thank you.&quot;</defaultValue>
    <description>&quot;Hi Team
 Today&apos;s Status Update
Today, I learn about salesforce
office end time - 06:00 PM
Thank you.&quot;
&quot;abc&quot; &amp; BR() &amp; &quot;xyz&quot;</description>
    <label>textBody</label>
    <type>TextArea</type>
</CustomField>