force-app/main/default/objects/EmailAI__c/fields/toMail__c.field-meta.xml
<CustomField>
    <fullName>toMail__c</fullName>
    <label>toMail</label>
    <length>225</length>
    <type>Text</type>
</CustomField>