force-app/main/default/objects/EmailAI__c/fields/website__c.field-meta.xml
<CustomField>
    <fullName>website__c</fullName>
    <label>website</label>
    <type>Url</type>
</CustomField>